# bak_manager

./: CMakeLists.txt  Dockerfile  doc.md  readme.md  slide.md  todo.md
include/: AES.h  ArgParser.h  BackupInfo.h  Compression.h  FileBase.h  FileHandler.h  GUI.h  Packer.h  aes.h
pre/: pre.sh
src/: AES.cpp  ArgParser.cpp  BackupInfo.cpp  Compression.cpp  FileBase.cpp  FileHandler.cpp  GUI.cpp  Packer.cpp  aes.cpp  main.cpp
tests/: AESModule_test.cpp  ArgParser_test.cpp  BDD_test.cpp  CMakeLists.txt  LZWCompression_test.cpp  filter_test.cpp  packer_bdd_test.cpp  simple_test.cpp
